test/digital-media-object/digital-media-object-processor-kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dissco-digital-media-object-processor-kafka
  labels:
    app: dissco-digital-media-object-processor-kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dissco-digital-media-object-processor-kafka
  template:
    metadata:
      labels:
        app: dissco-digital-media-object-processor-kafka
    spec:
      containers:
        - name: dissco-digital-media-object-processor-kafka
          image: public.ecr.aws/dissco/dissco-core-digital-media-object-processor
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          env:
            - name: spring.profiles.active
              value: kafka
            - name: spring.datasource.url
              value: jdbc:postgresql://terraform-20230822143945532600000001.cbppwfnjypll.eu-west-2.rds.amazonaws.com:5432/dissco
            - name: spring.datasource.username
              valueFrom:
                secretKeyRef:
                  name: db-secrets
                  key: db-username
            - name: spring.datasource.password
              valueFrom:
                secretKeyRef:
                  name: db-secrets
                  key: db-password
            - name: springdoc.show-actuator
              value: "false"
            - name: elasticsearch.hostname
              value: elastic-search-es-http.elastic.svc.cluster.local
            - name: elasticsearch.port
              value: "9200"
            - name: elasticsearch.username
              valueFrom:
                secretKeyRef:
                  name: aws-secrets
                  key: elastic-username
            - name: elasticsearch.password
              valueFrom:
                secretKeyRef:
                  name: aws-secrets
                  key: elastic-password
            - name: management.health.elasticsearch.enabled
              value: "false"
            - name: elasticsearch.index-name
              value: digital-media-object
            - name: kafka.publisher.host
              value: kafka-cluster-kafka-bootstrap.kafka.svc.cluster.local:9092
            - name: kafka.consumer.host
              value: kafka-cluster-kafka-bootstrap.kafka.svc.cluster.local:9092
            - name: kafka.consumer.group
              value: group
            - name: kafka.consumer.topic
              value: digital-media-object
            - name: spring.security.oauth2.resourceserver.jwt.issuer-uri
              value: https://login-demo.dissco.eu/auth/realms/dissco
            - name: token.id
              value: demo-api-client
            - name: token.grantType
              value: client_credentials
            - name: token.tokenEndpoint
              value: https://login-demo.dissco.eu/auth/realms/dissco/protocol/openid-connect/token
            - name: token.secret
              valueFrom:
                secretKeyRef:
                  name: aws-secrets
                  key: handle-endpoint-token
            - name: endpoint.handle-endpoint
              value: https://dev.dissco.tech/handle-manager/api/v1/pids/
            - name: endpoint.token-endpoint
              value: https://login-demo.dissco.eu/auth/realms/dissco/protocol/openid-connect/token
          resources:
            requests:
              memory: "500Mi"
              cpu: "200m"
            limits:
              memory: "500Mi"
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
---
apiVersion: keda.sh/v1alpha1
kind: ScaledObject
metadata:
  name: dissco-digital-media-object-processor-kafka-scaled-object
spec:
  scaleTargetRef:
    name: dissco-digital-media-object-processor-kafka
  minReplicaCount: 0
  maxReplicaCount:  5
  triggers:
    - type: kafka
      metadata:
        bootstrapServers: kafka-cluster-kafka-bootstrap.kafka.svc.cluster.local:9092
        consumerGroup: group
        topic: digital-media-object
        lagThreshold: '5'
